--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <name>hello-worldapp</name>
   <url>http://maven.apache.org</url>
 <properties>
+<java.version>17</java.version>
 <maven.compiler.source>17</maven.compiler.source>
 <maven.compiler.target>17</maven.compiler.target>
 </properties>
