--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,9 @@
   <name>hello-worldapp</name>
   <url>http://maven.apache.org</url>
 <properties>
-<java.version>17</java.version>
-<maven.compiler.source>17</maven.compiler.source>
-<maven.compiler.target>17</maven.compiler.target>
-</properties>
+                <java.version>17</java.version>
+                <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+        </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
